cabal-version: >= 1.6
name:          bert
version:       1.0
build-type:    Simple
license:       BSD3
license-file:  LICENSE
author:        marius a. eriksen
category:      Data
synopsis:      BERT implementation
description:   Implements the BERT serialization and RPC protocols
               described at <http://bert-rpc.org/>.
maintainer:    marius a. eriksen
copyright:     (c) 2009 marius a. eriksen

library
  build-depends: base == 4.*, containers >= 0.2, 
                 bytestring >= 0.9, binary >= 0.5, 
                 mtl >= 1.1, network-bytestring >= 0.1,
                 network >= 2.2, unix >= 2.0, time >= 1.1, 
                 parsec >= 2.0
  exposed-modules:
    Data.BERT
    Network.BERT
    Network.BERT.Transport
    Network.BERT.Client
    Network.BERT.Server

executable bert
  main-is: bert.hs